# my_agent

./: .env.example  README.md  conftest.py  pyproject.toml
docs/: 01-agent-framework-blueprint.md  02-agent-architecture.md  02-implementation-roadmap.md  03-agent-technology.md  03-technical-architecture-research.md
docs/research/: 01-agentic-research.md  04-agentic-production.md  05-latest-research-asof-1-april.md
src/my_agent/: config.py  main.py
src/my_agent/agents/: critic.py  executor.py  planner.py  supervisor.py
src/my_agent/api/: server.py
src/my_agent/graph/: checkpoint.py  graph.py  state.py
src/my_agent/tools/: __init__.py  code_executor.py  file_system.py  http_client.py  web_search.py
tests/: test_agents.py  test_graph.py  test_tools.py
