[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-agent"
version = "0.1.0"
description = "Modern hierarchical multi-agent system using LangGraph and OpenAI GPT-4o"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-tavily>=0.1",
    "langchain-core>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "RestrictedPython>=7.3",
    "python-dotenv>=1.0",
]

[project.scripts]
my-agent = "my_agent.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
